--- a/package.json
+++ b/package.json
@@ -9,10 +9,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "react": "^19.2.3",
-    "react-dom": "^19.2.3",
-    "framer-motion": "^12.23.26",
-    "@google/genai": "^1.34.0"
+    "react": "19.0.0",
+    "react-dom": "19.0.0",
+    "framer-motion": "11.11.17",
+    "@google/genai": "1.34.0"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
